@@ -1193,7 +1193,12 @@ class BaseRegistry(metaclass=RegistryMeta):
         units = self._parse_units(input_string, as_delta, case_sensitive)
         return self.Unit(units)
 
-    def _parse_units(self, input_string, as_delta=True, case_sensitive=None):
+    def _parse_units(
+        self,
+        input_string: str,
+        as_delta: bool = True,
+        case_sensitive: Optional[bool] = None,
+    ) -> UnitsContainerT:
         """Parse a units expression and returns a UnitContainer with
         the canonical names.
         """
@@ -1215,7 +1220,7 @@ class BaseRegistry(metaclass=RegistryMeta):
         if units.scale != 1:
             raise ValueError("Unit expression cannot have a scaling factor.")
 
-        ret = {}
+        ret = self.UnitsContainer({})
         many = len(units) > 1
         for name in units:
             cname = self.get_name(name, case_sensitive=case_sensitive)
@@ -1226,9 +1231,7 @@ class BaseRegistry(metaclass=RegistryMeta):
                 definition = self._units[cname]
                 if not definition.is_multiplicative:
                     cname = "delta_" + cname
-            ret[cname] = value
-
-        ret = self.UnitsContainer(ret)
+            ret = ret.add(cname, value)
 
         if as_delta:
             cache[input_string] = ret
