@@ -26,6 +26,7 @@ Pint Changelog
 - Add `pint.testing` with functions to compare pint objects in tests (Issue #1421).
 - Fix handling modulo & floordiv operator in pint_eval (Issue #1470)
 - Fix `to_compact` and `infer_base_unit` for non-float non_int_type.
+- Fix parsing of units string with same canonalized name (Issue #1441 & #1142)
 
 ### Breaking Changes
 
